syntax = "proto3";
package prismfinance.prismcore.treasury;

// this line is used by starport scaffolding # proto/tx/import
import "prismcore/treasury/action.proto";
import "prismcore/treasury/params.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/prism-finance/prism-core/x/treasury/types";

// Msg defines the Msg service.
service Msg {
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc SetAction(MsgSetAction) returns (MsgSetActionResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgUpdateParams {
  string authority = 1;
  Params params = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateParamsResponse {
}

message MsgSetAction {
  string authority = 1;
  Action action = 2 [(gogoproto.nullable) = false];
}

message MsgSetActionResponse {
}

// this line is used by starport scaffolding # proto/tx/message
