syntax = "proto3";
package refractedlabs.oracle.v1;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/refractedlabs/oracle/x/oracle/types/v1";

message OraclePreVote {
  string validator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string hash = 2;
  int64 submit_block = 3;
}
